# trud-vsem-parser-open-data

./: .gitignore  README.md  docker-compose.yaml
env-params/: api-service.env  database.env
src/: address_code.py  api.py  api_models.py  main.py  metadata_api.py  pyproject.toml
src/db/: __init__.py  controller.py  keys.py  models.py
src/parser/: __init__.py  data.py  districts.py  models.py  parser.py  proxy.py
