[project]
name = "czn-vacansy-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.124.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "typing-inspect>=0.9.0",
]
